Add comprehensive README with installation and user guide
- Detailed installation instructions for Windows, macOS, and Linux
- OpenSearch setup guide with Docker option
- ExifTool installation for RAW support
- Complete user guide with step-by-step instructions
- Screenshot placeholders for documentation
- Troubleshooting section
- Configuration reference
- Building from source instructions

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>